Online Voting App

--- a/app/src/main/res/layout/activity_eca_ec_review.xml
+++ b/app/src/main/res/layout/activity_eca_ec_review.xml
@@ -95,6 +95,25 @@ tools:context=".ECAVoterReviewActivity">
                             android:textStyle="bold"
                             android:id="@+id/cProfileName"/>
                     </LinearLayout>
+
+                    <!-- Added Election Name here -->
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="5dp"
+                        android:orientation="horizontal">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Election Name: "/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text=""
+                            android:textStyle="bold"
+                            android:id="@+id/cElectionName"/>
+                    </LinearLayout>
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -111,6 +130,7 @@ tools:context=".ECAVoterReviewActivity">
                             android:textStyle="bold"
                             android:id="@+id/cGender"/>
                     </LinearLayout>
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
