--- a/app/src/main/res/layout/activity_election.xml
+++ b/app/src/main/res/layout/activity_election.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:context=".ElectionActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -19,24 +21,27 @@
             app:cardMaxElevation="12dp"
             app:cardPreventCornerOverlap="true"
             app:cardUseCompatPadding="true">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
+
                 <TextView
+                    android:id="@+id/electionTxtView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:textSize="20dp"
+                    android:textSize="20sp"
                     android:textStyle="bold"
-                    android:layout_marginBottom="5dp"
-                    android:id="@+id/electionTxtView"/>
-                <RadioGroup
+                    android:layout_marginBottom="5dp" />
+
+                <!-- Add RecyclerView Here -->
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerViewCandidates"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/electionCandidatesRadioGroup">
-
-                </RadioGroup>
+                    android:scrollbars="vertical" />
 
                 <Button
                     android:id="@+id/chooseElectionCandidateBtn"
@@ -56,4 +61,5 @@
             android:text="Go To All Elections"
             app:backgroundTint="#4CAF50" />
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
