--- a/app/src/main/res/layout/list_item_candidate_layout.xml
+++ b/app/src/main/res/layout/list_item_candidate_layout.xml
@@ -1,26 +1,23 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    >
-<!--    <RadioButton-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:id="@+id/rdCandidateValue"/>-->
+    android:gravity="left|center_vertical"
+    android:orientation="horizontal">
+
+    <RadioButton
+        android:id="@+id/rdCandidateValue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
         <TextView
+            android:id="@+id/candidateName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Candidate Name"
-            android:id="@+id/candidateName"/>
-<!--        <TextView-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="Candidate Party"-->
-<!--            android:id="@+id/candidateParty"/>-->
+            android:text="Candidate Name" />
     </LinearLayout>
 </LinearLayout>
